<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    android:orientation="vertical"
    tools:context=".Presentation.Login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:lottie_autoPlay="true"
            app:lottie_fileName="construction_site.json"
            app:lottie_loop="true"
            app:lottie_repeatMode="restart" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/yellow_A700"
            android:textSize="@dimen/app_name_size"
            android:textStyle="italic" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="1dp"
                    android:contentDescription="@string/admin"
                    android:src="@drawable/man_in_office" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="1dp"
                    android:text="@string/admin"
                    android:textColor="@color/grey_white_1000" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/grey_white_1000">

                    <RadioButton
                        android:id="@+id/admin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="2dp" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="1dp"
                    android:contentDescription="@string/engineer"
                    android:src="@drawable/man_on_site" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="1dp"
                    android:text="@string/engineer"
                    android:textColor="@color/grey_white_1000" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/grey_white_1000">

                    <RadioButton
                        android:id="@+id/engineer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="2dp" />
                </RelativeLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- Dummy item to prevent AutoCompleteTextView from receiving focus -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:focusable="true"
                android:focusableInTouchMode="true" />
            <!-- :nextFocusUp and :nextFocusLeft have been set to the id of this component
           to prevent the dummy from receiving focus again -->
            <AutoCompleteTextView
                android:id="@+id/autotext"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:nextFocusLeft="@id/username"
                android:nextFocusUp="@id/username" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:maxWidth="488dp"
                    android:background="@drawable/edittext_theme"
                    android:drawableStart="@drawable/ic_name"
                    android:gravity="center_horizontal"
                    android:hint="@string/username_hint"
                    android:inputType="text"
                    android:padding="5dp"
                    android:maxLines="1"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/yellow_A700"
                    android:textCursorDrawable="@color/grey_white_1000" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="16dp"
                    android:maxWidth="488dp"
                    android:layout_marginBottom="4dp"
                    android:background="@drawable/edittext_theme"
                    android:drawableStart="@drawable/ic_password"
                    android:drawableLeft="@drawable/ic_password"
                    android:gravity="center"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:textAlignment="center"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/yellow_A700"
                    android:textCursorDrawable="@color/grey_white_1000" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/bg_button_register"
                    android:text="@string/login"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/grey_white_1000" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
